fix: adjust footer positioning for better responsiveness on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -488,6 +488,13 @@ html {
   padding-bottom: 8px !important;
   z-index: 1000;
 }
+
+@media (max-width: 767px) {
+  .footer {
+    position: static;
+    width: 100vw !important;
+  }
+}
 .footer-copywright {
   text-align: center !important;
   z-index: 7;
